# auth-service

./: .clang-format  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
auth-service/: CMakeLists.txt
auth-service/configs/: config_vars.yml  static_config.yml
auth-service/include/auth_service/: error.hpp
auth-service/include/auth_service/handlers/http/: resource_handler.hpp
auth-service/include/auth_service/handlers/v1/: login_user_handler.hpp  register_handler.hpp  register_user_handler.hpp  remove_user_handler.hpp
auth-service/postgresql/: delete_user.sql  insert_user.sql  select_user.sql
auth-service/src/: error.cpp  main.cpp
auth-service/src/handlers/: resource_handler.cpp
auth-service/src/handlers/v1/: login_user_handler.cpp  register_handler.cpp  register_user_handler.cpp  remove_user_handler.cpp
auth-service/static/: 404.html  index.html  main_page.html  recover_page.html  register_page.html  wait_redirect_page.html
