find_package(
  userver
  COMPONENTS
    core
    postgresql
  REQUIRED
)

set(PREPARED_SQL)
userver_add_sql_library(
  PREPARED_SQL
  NAMESPACE
    auth_service
  OUTPUT_DIR
    "${CMAKE_CURRENT_BINARY_DIR}/postgresql"
  SQL_FILES
    "${CMAKE_CURRENT_SOURCE_DIR}/postgresql/*.sql"
)
set_target_properties(
  PREPARED_SQL
    PROPERTIES
      OUTPUT_NAME
        "prepared_sql"
)

set(HANDLER_LIB)
set(handler_lib_headers)
add_library(HANDLER_LIB)
target_sources(
  HANDLER_LIB
    PRIVATE
      FILE_SET handler_lib_headers
      TYPE HEADERS
      BASE_DIRS
        "${CMAKE_CURRENT_SOURCE_DIR}/include"
      FILES
        "${CMAKE_CURRENT_SOURCE_DIR}/include/auth_service/handlers/v1/register_user_handler.hpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/auth_service/handlers/v1/login_user_handler.hpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/auth_service/handlers/v1/remove_user_handler.hpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/auth_service/handlers/http/resource_handler.hpp"
    PRIVATE
      "${CMAKE_CURRENT_SOURCE_DIR}/src/handlers/v1/register_user_handler.cpp"
      "${CMAKE_CURRENT_SOURCE_DIR}/src/handlers/v1/login_user_handler.cpp"
      "${CMAKE_CURRENT_SOURCE_DIR}/src/handlers/v1/remove_user_handler.cpp"
      "${CMAKE_CURRENT_SOURCE_DIR}/src/handlers/resource_handler.cpp"
)
target_compile_features(
  HANDLER_LIB
    PRIVATE
      cxx_std_23
    PUBLIC
      cxx_std_17
)
set_target_properties(
  HANDLER_LIB
  PROPERTIES
    OUTPUT_NAME
      "handlers"
)
target_link_libraries(
  HANDLER_LIB
    PUBLIC
      userver::core
      userver::postgresql
    PRIVATE
      PREPARED_SQL
)

set(SERVER)
set(server_headers)
add_executable(SERVER)
target_sources(
  SERVER
    PRIVATE
      FILE_SET server_headers
      TYPE HEADERS
      BASE_DIRS
        "${CMAKE_CURRENT_SOURCE_DIR}/include/"
      FILES
        "${CMAKE_CURRENT_SOURCE_DIR}/include/auth_service/handlers/v1/register_user_handler.hpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/auth_service/handlers/v1/remove_user_handler.hpp"
    PRIVATE
      "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp"
)
target_compile_features(
  SERVER
    PRIVATE
      cxx_std_23
    PUBLIC
      cxx_std_17
)
set_target_properties(
  SERVER
  PROPERTIES
    OUTPUT_NAME
      "auth-pg"
    RUNTIME_OUTPUT_DIRECTORY
      "${CMAKE_CURRENT_BINARY_DIR}/bin"
)
target_link_libraries(
  SERVER
    PRIVATE
      HANDLER_LIB
)